# techtown-payroll-backend

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  ISSUES.md  README.md  SECURITY.md  flow.md
.sqlx/: query-0399c9c83b47fc1b69b642ddeccaec9e2571aa5bf0995361f34cec8cbff5284b.json  query-1365eb0f022824054c91326c4a432656c9728cf63473c92f678f605bacdf1e60.json  query-192b5f2b9b5ecaa211e3f1cc3d9b5ac31b41147b3bc8140b35b68e4c464bb6ef.json  query-361fe34110b6e6018483cea426bb87787db5601ea3b5ab51eeb83b2dc9881e37.json  query-381612e8c61bc3f41e58b4fb2546335b28dee4956055a122df9a540717578048.json  query-61301d3f85516454af142558543836e4a3f250421ddfd895fdd7eeb01c5db368.json  query-680af5a57c44101fe57712ec9e3c45ccb617c80d87ae5e95a0b1626f7ff3870d.json  query-6d8b32a5c80e067089dbf84f38afcbe1d5d20303b183d6c63c642708e0d9a3c7.json  query-6f60a5bb89e04b665f9032c6e8d9b7f4ce390f696be7a251ae42c2cbe464e388.json  query-801c11928dff4e867740d3269cd4b3a22d9c7c7cf4a6290971c3a14f8f6e9bd7.json  query-81d913e1a7c393ec6d63be8abca0a2169cf73c46d1dd2f93b39f14d93bfee753.json  query-8463b730666c103dc39ef02f71aff06d5f6628fd43b05cf954cfa6dfc81aa562.json  query-86837d6638f97327ab2a4384a6c3f9921f77a7987459576529726feeba8ddbd4.json  query-87b4101caa7843c74e5d46aabb5c683db03f4706b4ade65d6af9b79f71f9699f.json  query-8d1a33df1b0d707337281e3c50e361898f3e41e7b00129def2bd8c7167fc14b2.json  query-993ebbce8a3acb0b0e932043099e528733ab94ffef5e191690cb9f805b68e9b6.json  query-a8b76023f76388f456eec0bd3bc3eeeda58db24a3dee3a621c2acbf4192f8f10.json  (+7 more)
migrations/: 0001_initial.sql
src/: config.rs  main.rs  (+1 more)
(+14 files in other folders)
